2010-10-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/getcolor.c (quantize_gray) src/getcolor.h src/gplt_x11.c:
	Continuation of defined palette revamp (2010-10-01). Break out the
	new code into a separate subroutine that can be shared with gnuplot_x11.

	* term/post.trm term/pslatex.trm term/svg.trm term/PostScript/cp1251.ps
	src/term_api.h src/term.c docs/gnuplot.doc: Add support for codepage 1251,
	an alternative 8-bit Cyrillic encoding.

2010-10-04  Matthew Biggar  <biggarm@users.sourceforge.net>

	* src/Makefile.am src/alloc.c:  Architecture (Alpha) specific work-
	around to insure that gp_malloc() does fail on error if 0 bytes are
	successfully allocated.

2010-10-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stdfn.c (not_a_number): Although DJGPP version 2.04 is reported
	to support atod("NaN"), this version is not universal. Switch to using
	an explicit bit pattern for NaN.

2010-10-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (cp_free): Prevent use-after-free error if a plot
	structure containing dynamically allocated data is reused for a later
	plot.

	* src/color.c (make_palette) src/getcolor.c (rgb1maxcolors_from_gray)
	docs/gnuplot.doc:
	Revamp the interaction of `set palette maxcolors` and defined palettes.
	Up until now, `set palette maxcolors N` meant both "allocate N colors"
	and "divide the color range into N equal parts".  This meant that a
	user-defined palette that used unequal divisions of the total range
	interacted badly with a limited number of palette colors.  Now we 
	guarantee that in the case of defined palette ranges, a gray value is
	never mapped to a color outside its proper range even if the ranges
	are very unevenly spaced.  If more color ranges are defined than the
	value of maxcolors, this may (or may not) result in increasing the
	effective value of maxcolors.  Outboard terminals that enforce maxcolors
	(e.g. x11) do not yet benefit from this change.
